# reflex-todomvc

./: .gitignore  HACKING.md  LICENSE  README.md  Setup.hs  cabal.project  default.nix  flake.nix  reflex-todomvc.app.xcent  reflex-todomvc.cabal  reflex-todomvc.nix  release.nix  result  shell.nix  stack.yaml  style.css
dep/android-activity/: github.json
dep/reflex-platform/: github.json
ios/: Config.xcconfig
ios/Reflex Todo MVC/: AppDelegate.swift  Ios_stub.h  ViewController.swift  module.map
ios/Reflex Todo MVC.xcodeproj/: project.pbxproj
ios/Reflex Todo MVC.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
macos/: Info.plist
reflex-todomvc.app/: Info.plist
src/: Main.hs
src-bin/: .gitignore  bench.hs  main.hs  warp.hs  wasm.hs  webkitgtk.hs  wkwebview.hs
src/Reflex/: IOS.hs  TodoMVC.hs
