Name: reflex-todomvc
Version: 0.1
Synopsis: Functional Reactive TodoMVC
Description: An implementation of the TodoMVC specification using the Reflex-DOM functional reactive DOM library
License: BSD3
License-file: LICENSE
Author: Ryan Trinkle
Maintainer: ryan.trinkle@gmail.com
Stability: Experimental
Category: FRP
Build-type: Simple
Cabal-version: >=1.8

flag webkit2gtk
  description: Use WebKit2 version of WebKitGTK.
  default: True

benchmark bench-builder-all
  if os(ios)
    buildable: False
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src-bin
  main-is:          bench.hs
  build-depends:
    base  >= 4.4 && < 5,
    reflex-todomvc,
    reflex,
    reflex-dom,
    containers,
    mtl,
    lens,
    ghcjs-dom,
    criterion,
    dependent-sum,
    transformers,
    ref-tf,
    text

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

library
  hs-source-dirs: src
  build-depends:
    base,
    reflex,
    ghcjs-dom == 0.7.*,
    reflex-dom,
    containers,
    text,
    mtl
  exposed-modules:
    Reflex.TodoMVC
  ghc-prof-options: -fprof-auto
  ghc-options:  -Wall -fwarn-tabs -funbox-strict-fields -O2
  if os(ios)
    build-depends:
      jsaddle-wkwebview
    exposed-modules:
      Reflex.IOS

executable reflex-todomvc
  hs-source-dirs: src-bin
  main-is: main.hs
  build-depends:
    base,
    ghcjs-dom,
    jsaddle-warp,
    reflex-todomvc
  ghc-prof-options: -fprof-auto
  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
  if os(ios)
    ghc-options: -staticlib -pgmlibtool libtool-quiet -stubdir .

executable reflex-todomvc-webkitgtk
  if os(ios) || impl(ghcjs)
    buildable: False
  hs-source-dirs: src-bin
  main-is: webkitgtk.hs
  if flag(webkit2gtk)
    build-depends:
      jsaddle-webkit2gtk
  else
    build-depends:
      jsaddle-webkitgtk
  build-depends:
    base,
    ghcjs-dom,
    reflex-todomvc
  ghc-prof-options: -fprof-auto
  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
  if os(ios)
    ghc-options: -staticlib -pgmlibtool libtool-quiet -stubdir .
